--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
         <artifactId>logback-classic</artifactId>
         <scope>runtime</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.microsoft.playwright</groupId>
+      <artifactId>playwright</artifactId>
+      <version>1.40.0</version>
+    </dependency>
   </dependencies>
 
   <build>
