--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
       <artifactId>playwright</artifactId>
       <version>1.40.0</version>
     </dependency>
+
+    <!-- BCrypt for password hashing -->
+    <dependency>
+      <groupId>org.mindrot</groupId>
+      <artifactId>jbcrypt</artifactId>
+      <version>0.4</version>
+    </dependency>
   </dependencies>
 
   <build>
