--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,3 +47,13 @@ resend:
 # Application settings
 app:
   frontend-url: ${APP_FRONTEND_URL:http://localhost:5173}
+
+# MercadoPago configuration
+mercadopago:
+  access-token: ${MP_ACCESS_TOKEN:}
+  secret-key: ${MP_SECRET_KEY:}
+  webhook-url: ${MP_WEBHOOK_URL:}
+  back-url:
+    success: ${MP_SUCCESS_URL:https://fitai-analyzer-732767853162.us-west1.run.app/checkout/success}
+    failure: ${MP_FAILURE_URL:https://fitai-analyzer-732767853162.us-west1.run.app/checkout/failure}
+    pending: ${MP_PENDING_URL:https://fitai-analyzer-732767853162.us-west1.run.app/checkout/pending}
