--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,8 +50,8 @@ app:
 
 # MercadoPago configuration
 mercadopago:
-  access-token: ${MP_ACCESS_TOKEN:}
-  secret-key: ${MP_SECRET_KEY:}
+  access-token: ${MP_ACCESS_TOKEN:${_MP_ACCESS_TOKEN:}}
+  secret-key: ${MP_SECRET_KEY:${_MP_SECRET_KEY:}}
   webhook-url: ${MP_WEBHOOK_URL:}
   back-url:
     success: ${MP_SUCCESS_URL:https://fitai-analyzer-732767853162.us-west1.run.app/checkout/success}
