--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,6 +54,6 @@ mercadopago:
   secret-key: ${MP_SECRET_KEY:${_MP_SECRET_KEY:}}
   webhook-url: ${MP_WEBHOOK_URL:${_MP_WEBHOOK_URL:}}
   back-url:
-    success: ${MP_SUCCESS_URL:https://fitai-analyzer-732767853162.us-west1.run.app/checkout/success}
-    failure: ${MP_FAILURE_URL:https://fitai-analyzer-732767853162.us-west1.run.app/checkout/failure}
-    pending: ${MP_PENDING_URL:https://fitai-analyzer-732767853162.us-west1.run.app/checkout/pending}
+    success: ${MP_SUCCESS_URL:https://analisa-exercicio-732767853162.southamerica-east1.run.app/checkout/success}
+    failure: ${MP_FAILURE_URL:https://analisa-exercicio-732767853162.southamerica-east1.run.app/checkout/failure}
+    pending: ${MP_PENDING_URL:https://analisa-exercicio-732767853162.southamerica-east1.run.app/checkout/pending}
