feat: Implement welcome email with role-based content and update sender address

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,7 +42,7 @@ flyway:
 # Resend email service configuration
 resend:
   api-key: ${RESEND_API_KEY:}
-  from-email: ${RESEND_FROM_EMAIL:onboarding@resend.dev}
+  from-email: ${RESEND_FROM_EMAIL:onboarding@fitanalizer.com.br}
 
 # Application settings
 app:
