--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
       <artifactId>sdk-java</artifactId>
       <version>2.1.7</version>
     </dependency>
+
+    <!-- Google Cloud Storage -->
+    <dependency>
+        <groupId>com.google.cloud</groupId>
+        <artifactId>google-cloud-storage</artifactId>
+        <version>2.31.1</version>
+    </dependency>
   </dependencies>
 
   <build>
