fix(security): allow anonymous access to all routes to resolve 401 errors

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,11 @@ micronaut:
   serde:
     deserialization:
       ignore-unknown: true
+  security:
+    intercept-url-map:
+      - pattern: /**
+        access:
+          - isAnonymous()
   server:
     cors:
       enabled: true
