feat: add MP_PUBLIC_KEY config with application.yml fallback
- Added public-key property to mercadopago config section
- Modified AppConfigController to fallback to application.yml when
  config key is not found in database
- Created CONFIG_KEY_TO_PROPERTY map for known keys (MP_PUBLIC_KEY, GEMINI_API_KEY)
- Frontend can now fetch MP_PUBLIC_KEY dynamically via /api/config/MP_PUBLIC_KEY

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,6 +58,7 @@ app:
 mercadopago:
   access-token: ${MP_ACCESS_TOKEN:${_MP_ACCESS_TOKEN:}}
   secret-key: ${MP_SECRET_KEY:${_MP_SECRET_KEY:}}
+  public-key: ${MP_PUBLIC_KEY:APP_USR-d60cd062-292b-4678-89be-16f8bcedc002}
   webhook-url: ${MP_WEBHOOK_URL:${_MP_WEBHOOK_URL:}}
   back-url:
     success: ${MP_SUCCESS_URL:https://fitanalizer.com.br/checkout/success}
