--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,7 +52,7 @@ resend:
 
 # Application settings
 app:
-  frontend-url: ${APP_FRONTEND_URL:http://localhost:5173}
+  frontend-url: ${APP_FRONTEND_URL:https://fitanalizer.com.br}
   backend-url: ${APP_BACKEND_URL:https://app-back-ia-732767853162.southamerica-east1.run.app}
 
 # MercadoPago configuration
